Bug 890048 - Fix rooting of the findReferences shell command; r=jimb,billm