js/src/jit-test/tests/gc/bug-890048.js
@@ -1,0 +1,3 @@
+if (typeof findReferences == 'function') {
+    findReferences([schedulegc(1)])
+}
